--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.7
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -35,25 +35,26 @@ jobs:
           sudo apt-get install libvlccore-dev
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime
-          haxelib install openfl
-          haxelib --never install flixel
+          haxelib install lime 8.2.2
+          haxelib install openfl 9.2.2
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit
+          haxelib set flixel-ui 2.6.0 --always
+          haxelib set flixel-addons 2.11.0 --always
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git hscript https://github.com/HaxeFoundation/hscript
-          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
+          haxelib git hscript-ex https://github.com/moxie-coder/hscript-ex
+          haxelib set openfl 9.2.2 --always
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4
         with:
           name: linuxBuild
           path: 'export/release/linux/bin' 
@@ -66,25 +67,26 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.7
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > nul
-          haxelib install lime
-          haxelib install openfl
-          haxelib --never install flixel
+          haxelib install lime 8.2.2
+          haxelib install openfl 9.2.2
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib install hxCodec
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit
+          haxelib set flixel-ui 2.6.0 --always
+          haxelib set flixel-addons 2.11.0 --always
+          haxelib install hxCodec 2.5.1
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git hscript https://github.com/HaxeFoundation/hscript
-          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
+          haxelib git hscript-ex https://github.com/moxie-coder/hscript-ex
+          haxelib set openfl 9.2.2 --always
           haxelib list
         shell: cmd
       - name: Create Version Tag
@@ -92,7 +94,7 @@ jobs:
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4
         with:
           name: windowsBuild
           path: export/release/windows/bin
@@ -105,24 +107,25 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.7
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > nul
-          haxelib install lime
-          haxelib install openfl
-          haxelib --never install flixel
+          haxelib install lime 8.2.2
+          haxelib install openfl 9.2.2
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit
+          haxelib set flixel-ui 2.6.0 --always
+          haxelib set flixel-addons 2.11.0 --always
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git hscript https://github.com/HaxeFoundation/hscript
-          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
+          haxelib git hscript-ex https://github.com/moxie-coder/hscript-ex
+          haxelib set openfl 9.2.2 --always
           haxelib list
         shell: cmd
       - name: Create Version Tag
@@ -130,7 +133,7 @@ jobs:
       - name: Compile
         run: haxelib run lime build windows -32 -D 32bits --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4
         with:
           name: windows32Build
           path: export/32bit/windows/bin
@@ -143,31 +146,32 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.7
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null
-          haxelib install lime
-          haxelib install openfl
-          haxelib --never install flixel
+          haxelib install lime 8.2.2
+          haxelib install openfl 9.2.2
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit
+          haxelib set flixel-ui 2.6.0 --always
+          haxelib set flixel-addons 2.11.0 --always
+          haxelib git linc_luajit https://github.com/superpowers04/linc_luajit
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git hscript https://github.com/HaxeFoundation/hscript
-          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
+          haxelib git hscript-ex https://github.com/moxie-coder/hscript-ex
+          haxelib set openfl 9.2.2 --always
           haxelib list
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4
         with:
           name: macBuild
           path: export/release/macos/bin
@@ -180,23 +184,24 @@ jobs:
 
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.7
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > nul
-          haxelib install lime
-          haxelib install openfl
-          haxelib --never install flixel
+          haxelib install lime 8.2.2
+          haxelib install openfl 9.2.2
+          haxelib --never install flixel 5.2.2
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
-          haxelib install flixel-ui
-          haxelib install flixel-addons
+          haxelib set flixel-ui 2.6.0 --always
+          haxelib set flixel-addons 2.11.0 --always
           haxelib git hscript https://github.com/HaxeFoundation/hscript
-          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
-          haxelib install hxCodec
+          haxelib git hscript-ex https://github.com/moxie-coder/hscript-ex
+          haxelib install hxCodec 2.5.1
+          haxelib set openfl 9.2.2 --always
           haxelib list
         shell: cmd
       - name: Create Version Tag
@@ -204,7 +209,7 @@ jobs:
       - name: Compile
         run: haxelib run lime build html5 --app-version="4.0.0-${{ github.run_id}}"
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2.2.4
+        uses: actions/upload-artifact@v4
         with:
           name: html5Build
           path: export/release/html5/bin
